--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -51,6 +50,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "fs-extra": "^3.0.1",
     "node-sass": "^4.9.3",
     "react-social-icons": "^3.0.0",
     "sass-loader": "^7.1.0",
